2018-04-07  Mark Wielaard  <mark@klomp.org>

	* libdwP.h (struct Dwarf_CU): Add locs_base.
	(__libdw_cu_locs_base): New static inline function.
	* libdw_findcu.c (__libdw_intern_next_unit): Initialize locs_base.
	* dwarf_begin_elf.c (valid_p): Create fake_loclists_cu if necessary.
	* dwarf_end.c (dwarf_end): Clean up fake_loclists_cu.
	* dwarf_getlocation.c (initial_offset): Handle .debug_loclists.
	(getlocations_addr): Likewise.
	(dwarf_getlocation_addr): Likewise.
	* dwarf_getlocation_attr.c (attr_form_cu): Use fake_loclists_cu for
	DWARF5.
	(initial_offset): Handle DW_FORM_loclistx.
	* dwarf_ranges.c (__libdw_read_begin_end_pair_inc): Handle
	.debug_loclists.
	* libdwP.h (struct Dwarf): Add fake_loclists_cu.

2018-04-12  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DWARF5 location list entry DW_LLE encodings.
	* begin_elf.c (dwarf_scnnames): Add IDX_debug_loclists.
	* dwarf_error.c (errmsgs): Remove DWARF_E_NO_LOCLIST. And replace
	with DWARF_E_NO_DEBUG_LOC, DWARF_E_NO_DEBUG_LOCLISTS and
	DWARF_E_NO_LOC_VALUE.
	* dwarf_formudata.c (dwarf_formudata): Handle DW_AT_loclists_base
	and DW_FORM_loclistx.
	* dwarf_getlocation.c (attr_ok): Use DWARF_E_NO_LOC_VALUE.
	(initial_offset): Use DWARF_E_NO_DEBUG_LOC.
	* libdwP.h: Add IDX_debug_rnglists. Remove DWARF_E_NO_LOCLIST.
	Add DWARF_E_NO_DEBUG_LOC, DWARF_E_NO_DEBUG_LOCLISTS and
	DWARF_E_NO_LOC_VALUE.

2018-05-25  Mark Wielaard  <mark@klomp.org>

	* libdw_find_split_unit.c (__libdw_find_split_unit): Extract linking
	skeleton and split compile units code into...
	* libdwP (__libdw_link_skel_split): ...this new function.

2018-04-06  Mark Wielaard  <mark@klomp.org>

	* dwarf_formaddr.c (__libdw_addrx): New function, extracted from...
	(dwarf_formaddr): here. Use __libdw_addrx.
	* dwarf_getlocation.c (getlocations_addr): Pass cu to
	__libdw_read_begin_end_pair_inc.
	* dwarf_ranges.c (__libdw_read_begin_end_pair_inc): Take cu as
	argument. Handle .debug_rnglists.