@@ -1,3 +1,9 @@
+2018-05-28  Mark Wielaard  <mark@klomp.org>
+
+	* run-readelf-info-plus.sh: New test.
+	* Makefile.am (TESTS): Add run-readelf-info-plus.sh.
+	(EXTRA_DIST): Likewise.
+
 2018-04-29  Mark Wielaard  <mark@klomp.org>
 
 	* run-readelf-addr.sh: New test.
